Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121399

tst_QWizard::task177022_setFixedSize() failed on Wayland

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.0 Beta2, 6.8.0 FF
    • 6.7, 6.8
    • QPA: Wayland
    • None

      https://codereview.qt-project.org/c/qt/qtwayland/+/532750
      https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1706418219
      https://testresults.qt.io/coin/api/log/qt/qtbase/2074aac410dc8bcf2c07c623832232753aabfe36/LinuxUbuntu_22_04x86_64LinuxUbuntu_22_04x86_64GCCqtci-linux-Ubuntu-22.04-x86_64-50-4552c7InsignificantTests_RunDependencyTests_Sccache_TestOnly/744b48799bbe087a180a9e3b043c4988308774d7/test_1706418426/log.txt.gz

      agent:2024/01/20 15:25:44 build.go:404: 486: FAIL!  : tst_QWizard::task177022_setFixedSize() Compared values are not the same
      agent:2024/01/20 15:25:44 build.go:404: 486:    Actual   (wiz.size())          : QSize(294x167)
      agent:2024/01/20 15:25:44 build.go:404: 486:    Expected (QSize(width, height)): QSize(300x200)
      agent:2024/01/20 15:25:44 build.go:404: 486:    Loc: [/home/qt/work/qt/qtbase/tests/auto/widgets/dialogs/qwizard/tst_qwizard.cpp(2620)]
      

        For Gerrit Dashboard: QTBUG-121399
        # Subject Branch Project Status CR V

            davidedmundson David Edmundson
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes