Client: Update size hints when updating the decoration

Size hints are in wayland's "window geometry". This includes the space
for any client side decoration that QtWayland has to add.

We need to update the size hints whenever decoration is created or
destroyed and these margins change.

Fixes: QTBUG-121399
Change-Id: Ie8c1898859774e1c8dff93695af15327379ad3b6
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 76569162c796be0ac927e04bfe8a6a71809ff7a1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>